--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,30 @@
   --ifm-container-width: auto;
 }
 
+.drawio {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.3s;
+  background-color: #FFF;
+}
+
+.drawio:hover {
+  max-width: auto;
+  transform: scale(1.5);
+}
+
+.mermaid {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.3s;
+  background-color: #FFF;
+}
+
+.mermaid:hover {
+  max-width: auto;
+  transform: scale(1.5);
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #E4E8EE;
