--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,28 +14,19 @@
   --ifm-container-width: auto;
 }
 
-.drawio {
-  max-width: 100%;
-  height: auto;
-  transition: transform 0.3s;
-  background-color: #FFF;
-}
-
-.drawio:hover {
-  max-width: auto;
-  transform: scale(1.5);
-}
-
 .mermaid {
   max-width: 100%;
   height: auto;
   transition: transform 0.3s;
-  background-color: #FFF;
 }
 
-.mermaid:hover {
-  max-width: auto;
-  transform: scale(1.5);
+ .mermaid svg {
+  background-color: var(--ifm-code-background);
+  height: auto;
+}
+
+[data-theme='dark'] .mermaid svg {
+  background-color: var(--ifm-code-background);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -54,10 +45,6 @@
 
 [data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
-}
-
-.markdown svg {
-  height: auto;
 }
 
 .footer--dark {
